# ticket_rag_001

./: .gitignore  ARCHITECTURE.md  Cargo.toml  TODO.md  docker-compose.yml
api/: Cargo.toml  build.rs
api/src/: dto.rs  lib.rs  middleware.rs  routes.rs  server.rs
api/src/handlers/: admin.rs  finetune.rs  mod.rs  root.rs  search.rs  solutions.rs  stats.rs  tickets.rs
business/: Cargo.toml
business/src/: lib.rs  processors.rs  validators.rs  workflows.rs
config/: development.toml
core/: Cargo.toml
core/src/: config.rs  errors.rs  lib.rs
core/src/models/: common.rs  mod.rs  solution.rs  ticket.rs
core/src/traits/: embedding.rs  llm.rs  mod.rs  reranking.rs  vector_db.rs
infrastructure/: Cargo.toml
infrastructure/src/: configuration.rs  container.rs  factory.rs  lib.rs  logging.rs  monitoring.rs
scripts/: setup.sh
services/: Cargo.toml
services/src/: database.rs  embedding.rs  lib.rs  llm.rs  reranking.rs  vector_db.rs
src/: main.rs
