[package]
name = "rag-infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
rag-deps = { path = "../deps" }
rag-core = { path = "../core" }
rag-services = { path = "../services" }
rag-business = { path = "../business" }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 异步运行时
tokio = { workspace = true }

# 日志
log = { workspace = true }
env_logger = { workspace = true }

# 错误处理
anyhow = { workspace = true }
thiserror = { workspace = true }

# 配置
toml = { workspace = true }

# 其他工具
once_cell = { workspace = true } 